Handle locale in different server environments

--- a/locale/nb_NO/LC_MESSAGES/messages.po
+++ b/locale/nb_NO/LC_MESSAGES/messages.po
@@ -347,17 +347,17 @@ msgstr "lenke"
 
 #: ukrules.py:244
 #, fuzzy, python-format
-msgid "One reference added"
-msgid_plural "%(num)d references added"
+msgid "One reference"
+msgid_plural "%(num)d references"
 msgstr[0] "Én kilde lagt til"
-msgstr[1] "%d kilder lagt til"
+msgstr[1] "%(num)d kilder lagt til"
 
 #: ukrules.py:247
 #, fuzzy, python-format
-msgid "One reference pointer added"
-msgid_plural "%(num)d reference pointers added"
+msgid "One reference pointer"
+msgid_plural "%(num)d reference pointers"
 msgstr[0] "Én henvisning til navngitt kilde"
-msgstr[1] "%d henvisninger til navngitte kilder"
+msgstr[1] "%(num)d henvisninger til navngitte kilder"
 
 #: ukrules.py:273
 #, python-format
