--- a/locale/fi_FI/LC_MESSAGES/messages.po
+++ b/locale/fi_FI/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: UKBot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-01-25 18:42+0100\n"
-"PO-Revision-Date: 2013-01-25 18:44+0100\n"
+"POT-Creation-Date: 2013-01-25 19:06+0100\n"
+"PO-Revision-Date: 2013-01-25 19:07+0100\n"
 "Last-Translator: Dan Michael Heggø <danmichaelo@gmail.com>\n"
 "Language-Team: \n"
 "Language: Suomi\n"
@@ -124,9 +124,9 @@ msgstr ""
 
 #: ukbot.py:968
 #, python-format
-msgid "Unkown argument given to {{ml|%(template)s}}: %(argument)s"
+msgid "Unkown argument given to {{tl|%(template)s}}: %(argument)s"
 msgstr ""
-"Tuntematon argumentti on annettu kohteeseen {{ml|%(template)s}}: %(argument)s"
+"Tuntematon argumentti on annettu kohteeseen {{tl|%(template)s}}: %(argument)s"
 
 #: ukbot.py:980
 #, python-format
@@ -157,21 +157,21 @@ msgstr ""
 
 #: ukbot.py:1050
 #, python-format
-msgid "Couldn't parse the date given to the {{ml|%(template)s}} template."
+msgid "Couldn't parse the date given to the {{tl|%(template)s}} template."
 msgstr ""
-"{{ml|%(template)s}}-mallineeseen annettu päivämäärä ei tullut ymmärretyksi."
+"{{tl|%(template)s}}-mallineeseen annettu päivämäärä ei tullut ymmärretyksi."
 
 #: ukbot.py:1079
 #, python-format
 msgid ""
-"Could not find the user %(user)s given to the {{ml|%(template)s}} template."
-msgstr "Käyttäjää %(user)s ri löytynyt {{ml|%(template)s}}-mallineesta."
+"Could not find the user %(user)s given to the {{tl|%(template)s}} template."
+msgstr "Käyttäjää %(user)s ri löytynyt {{tl|%(template)s}}-mallineesta."
 
 #: ukbot.py:1095
 #, python-format
 msgid ""
-"Couldn't find the user %(user)s given to the {{ml|%(template)s}} template."
-msgstr "Fant ikke brukeren %(user)s gitt til {{ml|%(template)s}}-malen."
+"Couldn't find the user %(user)s given to the {{tl|%(template)s}} template."
+msgstr "Fant ikke brukeren %(user)s gitt til {{tl|%(template)s}}-malen."
 
 #: ukbot.py:1210
 #, python-format
@@ -309,8 +309,8 @@ msgstr "uudelleenohjaus"
 
 #: ukrules.py:125
 #, python-format
-msgid "removal of {{ml|%(template)s}}"
-msgstr "mallineen {{ml|%(template)s}} poisto"
+msgid "removal of {{tl|%(template)s}}"
+msgstr "mallineen {{tl|%(template)s}} poisto"
 
 #: ukrules.py:128
 #, python-format
@@ -381,6 +381,11 @@ msgstr "bonus %(bytes).f tavua"
 #, python-format
 msgid "bonus %(words)d words"
 msgstr "bonus %(words)d sanaa"
+
+#~ msgid "Unkown argument given to {{ml|%(template)s}}: %(argument)s"
+#~ msgstr ""
+#~ "Tuntematon argumentti on annettu kohteeseen {{ml|%(template)s}}: "
+#~ "%(argument)s"
 
 #~ msgid "Thanks, <nowiki>~~~~</nowiki>"
 #~ msgstr "Terveisin <nowiki>~~~~</nowiki>"
