--- a/nb_NO.po
+++ b/nb_NO.po
@@ -1,17 +1,17 @@
 # Norwegian Bokmål translation for UKBot
-# Copyright (C) 2013 Gálaniitoluodda
+# Copyright (C) 2013
 # This file is distributed under the same license as the UKBot package.
-#
+# Dan Michael Heggø <danmichaelo@gmail.com>, 2013
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: UKBot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-01-25 19:06+0100\n"
-"PO-Revision-Date: 2013-01-25 19:07+0100\n"
+"POT-Creation-Date: 2013-01-25 21:03+0100\n"
+"PO-Revision-Date: 2013-01-25 19:08+0100\n"
 "Last-Translator: Dan Michael Heggø <danmichaelo@gmail.com>\n"
 "Language-Team: \n"
-"Language: Suomi\n"
+"Language: Norsk bokmål\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -24,33 +24,33 @@ msgid ""
 "A problem encountered with revision %(revid)d may have influenced the word "
 "count for this revision: <nowiki>%(problems)s</nowiki> "
 msgstr ""
-"Ongelma versiossa %(revid)d, on mahdollisesti vaikuttanut seuraaviin "
-"pisteisiin: <nowiki>%(problems)s</nowiki> "
+"Det oppsto et problem med revisjon %(revid)d, som kan ha "
+"påvirketordtellingen for denne revisjonen: <nowiki>%(problems)s</nowiki> "
 
 #: ukbot.py:354
 msgid "Reverted"
-msgstr "Palautettu"
+msgstr "Tilbakestilte"
 
 #: ukbot.py:685
 msgid "Category hit"
-msgstr "Luokkaosuma"
+msgstr "Kategoritreff"
 
 #: ukbot.py:693
 msgid "Notes"
-msgstr "Huomoita"
+msgstr "Merknader"
 
 #: ukbot.py:695
 #, python-format
 msgid "Total: {{formatnum:%(bytecount)d}} bytes, %(wordcount)d words"
-msgstr "Yhteensä: {{formatnum:%(bytecount)d}} tavua, %(wordcount)d sanaa"
+msgstr "Totalt: {{formatnum:%(bytecount)d}} bytes, %(wordcount)d ord"
 
 #: ukbot.py:707
 msgid ""
 "<strong>Note:</strong> The contributions to this article are currently "
 "disqualified."
 msgstr ""
-"<strong>Huomio:</strong> Muokkaukset tähäm artikkeliin on toistaiseksi "
-"hylätty."
+"<strong>Merk:</strong> Bidragene til denne artikkelen er for tiden "
+"diskvalifisert."
 
 #: ukbot.py:733
 msgid "suspended since"
@@ -58,24 +58,24 @@ msgstr "suspendert siden"
 
 #: ukbot.py:737
 msgid "No qualifying contributions registered yet"
-msgstr "Hyväksyttyjä muokkauksia ei ole vielä rekisteröity"
+msgstr "Ingen kvalifiserte bidrag har blitt registrert enda"
 
 #: ukbot.py:739
 msgid "articles"
-msgstr "artikkelia"
+msgstr "artikler"
 
 #: ukbot.py:741
 msgid "{{Kolonner}}\n"
-msgstr "{{Sarakkeet}}\n"
+msgstr "{{Kolonner}}\n"
 
 #: ukbot.py:766
 #, python-format
 msgid "Found no \"%(section)s\" sections in the page \"%(page)s\""
-msgstr "Ei löydettyjä \"%(section)s\"-osioita sivulla \"%(page)s\""
+msgstr "Fant ingen \"%(section)s\"-seksjoner på siden \"%(page)s\""
 
 #: ukbot.py:788
 msgid "Couldn't find the list of participants!"
-msgstr "Osallistujaluettelon löytäminen epäonnistui!"
+msgstr "Fant ikke deltakerlisten!"
 
 #: ukbot.py:815
 #, python-format
@@ -83,68 +83,64 @@ msgid ""
 "There are no point rules defined for this contest. Point rules are defined "
 "by {{tl|%(template)s}}."
 msgstr ""
-"Tähän kilpailuun ei ole asetettu pistelaskusääntöjä. Säännöt merkitään näin: "
-"{{tl|%(template)s}}."
+"Denne konkurransen har ingen poengregler. Poengregler defineres med {{tl|"
+"%(template)s}}."
 
 #: ukbot.py:822
 #, python-format
 msgid "This contest is missing a {{tl|%(template)s}} template."
-msgstr "Tästä kilpailusta puuttuu {{tl|%(template)s}}-malline."
+msgstr "Denne konkurransen mangler en {{tl|%(template)s}}-mal."
 
 #: ukbot.py:827
 msgid "Could not parse the catignore page"
-msgstr "Catignore-sivun sisältöä ei ymmärretty"
+msgstr "Klarte ikke å tolke catignore-siden"
 
 #: ukbot.py:851
 #, python-format
 msgid ""
 "No template (second argument) given to {{tlx|%(template)s|%(firstarg)s}}"
 msgstr ""
-"Mallineita (toinen argumentti) ei ole annettu kohteeseen {{tlx|%(template)s|"
-"%(firstarg)s}}"
+"Ingen mal (andre argument) ble gitt til {{mlp|%(template)s|%(firstarg)s}}"
 
 #: ukbot.py:859
 #, python-format
 msgid ""
 "No byte limit (second argument) given to {{tlx|%(template)s|%(firstarg)s}}"
 msgstr ""
-"Tavurajaa (toinen argumentti) ei ole annettu kohteeseen {{tlx|%(template)s|"
+"Ingen bytegrense (andre argument) ble gitt til {{mlp|%(template)s|"
 "%(firstarg)s}}"
 
 #: ukbot.py:865
 #, python-format
 msgid "No categories given to {{tlx|%(template)s|%(firstarg)s}}"
-msgstr "Kohteeseen {{tlx|%(template)s|%(firstarg)s}} ei ole annettu luokkia"
+msgstr "Ingen kategorier gitt til {{mlp|%(template)s|%(firstarg)s}}"
 
 #: ukbot.py:888
 #, python-format
 msgid "Unknown argument given to {{tl|%(template)s}}: %(argument)s"
-msgstr ""
-"Tuntematon argumentti on annettu kohteeseen {{tl|%(template)s}}: %(argument)s"
+msgstr "Ukjent argument gitt til {{tl|%(template)s}}: %(argument)s"
 
 #: ukbot.py:968
 #, python-format
 msgid "Unkown argument given to {{tl|%(template)s}}: %(argument)s"
-msgstr ""
-"Tuntematon argumentti on annettu kohteeseen {{tl|%(template)s}}: %(argument)s"
+msgstr "Ukjent argument gitt til {{ml|%(template)s}}: %(argument)s"
 
 #: ukbot.py:980
 #, python-format
 msgid "Could not parse the {{tl|%(template)s}} template."
-msgstr "{{tl|%(template)s}}-mallineen ymmärtäminen epäonnistui."
+msgstr "Klarte ikke å tolke {{tl|%(template)s}}-malen."
 
 #: ukbot.py:1006
 #, python-format
 msgid ""
 "Did not find %(week)s+%(year)s or %(start)s+%(end)s in {{tl|%(templates)s}}."
 msgstr ""
-"Kohteesta {{tl|%(templates)s}} ei ole löydetty %(week)s+%(year)s eikä "
-"%(start)s+%(end)s."
+"Fant ikke %(week)s+%(year)s eller %(start)s+%(end)s i {{tl|%(templates)s}}."
 
 #: ukbot.py:1015
 #, python-format
 msgid "Did not find any organizers in {{tl|%(template)s}}."
-msgstr "Järjestäjiä ei ole löydetty kohteesta {{tl|%(template)s}}."
+msgstr "Fant ingen organisatorer i {{tl|%(template)s}}."
 
 #: ukbot.py:1037
 #, python-format
@@ -158,30 +154,29 @@ msgstr ""
 #: ukbot.py:1050
 #, python-format
 msgid "Couldn't parse the date given to the {{tl|%(template)s}} template."
-msgstr ""
-"{{tl|%(template)s}}-mallineeseen annettu päivämäärä ei tullut ymmärretyksi."
+msgstr "Klarte ikke å tolke datoen gitt til {{ml|%(template)s}}-malen."
 
 #: ukbot.py:1079
 #, python-format
 msgid ""
 "Could not find the user %(user)s given to the {{tl|%(template)s}} template."
-msgstr "Käyttäjää %(user)s ri löytynyt {{tl|%(template)s}}-mallineesta."
+msgstr "Fant ikke brukeren %(user)s gitt til {{ml|%(template)s}}-malen."
 
 #: ukbot.py:1095
 #, python-format
 msgid ""
 "Couldn't find the user %(user)s given to the {{tl|%(template)s}} template."
-msgstr "Fant ikke brukeren %(user)s gitt til {{tl|%(template)s}}-malen."
+msgstr "Fant ikke brukeren %(user)s gitt til {{ml|%(template)s}}-malen."
 
 #: ukbot.py:1210
 #, python-format
 msgid "Weekly contest for week %(week)d"
-msgstr "Viikon %(week)d kilpailu"
+msgstr "Ukens konkurranse uke %(week)d"
 
 #: ukbot.py:1212
 #, python-format
 msgid "Weekly contest for week %(startweek)d–%(endweek)d"
-msgstr "Viikkojen %(startweek)d–%(endweek)d kilpailu"
+msgstr "Ukens konkurranse uke %(startweek)d–%(endweek)d"
 
 #: ukbot.py:1247
 #, python-format
@@ -189,16 +184,16 @@ msgid ""
 "Note that the contest this week is [[%(url)s|{{%(template)s|$(weekarg)s="
 "%(week)s}}]]. Join in!"
 msgstr ""
-"Muista, että tämän viikon kilpailu on [[%(url)s|{{%(template)s|$(weekarg)s="
-"%(week)s}}]]. Onnea matkaan!"
+"Husk at denne ukens konkurranse er [[%(url)s|{{%(template)s|$(weekarg)s="
+"%(week)s}}]]. Lykke til!"
 
 #: ukbot.py:1253
 msgid "Regards"
-msgstr "Terveisin"
+msgstr "Hilsen"
 
 #: ukbot.py:1253
 msgid "and"
-msgstr "ja"
+msgstr "og"
 
 #: ukbot.py:1296
 #, python-format
@@ -210,36 +205,36 @@ msgid ""
 "everything looks fine, [%(link)s click here] (and save) to indicate that I "
 "can send out the awards at first occasion."
 msgstr ""
-"Nyt sinun on tarkistettava tulokset. Mikäli [[%(page)s|kilpailusivun]] "
-"lopussa on virheilmoituksia, on sinun tarkistettava, että muokkauksista on "
-"saatu oikea määrä pisteitä. Katso myös onko keskustelusivulla kommentteja "
-"tai valituksia. Jos kaikki näyttää olevan kunnossa, paina [%(link)s tästä] "
-"(ja tallenna), niin rusetit lähetetään melko nopeasti."
+"Du må nå sjekke resultatene. Hvis det er feilmeldinger nederst på [[%(page)s|"
+"konkurransesiden]] må du sjekke om de relaterte bidragene har fått poengene "
+"de skal ha. Se også etter om det er kommentarer eller klager på "
+"diskusjonssiden. Hvis alt ser greit ut kan du trykke [%(link)s her] (og "
+"lagre), så sender jeg ut rosetter ved første anledning."
 
 #: ukbot.py:1297
 msgid "Thanks, ~~~~"
-msgstr "Terveisin, ~~~~"
+msgstr "Hilsen ~~~~"
 
 #: ukbot.py:1309
 #, python-format
 msgid "Awards have been [%(link)s sent out]."
-msgstr "Rusetit on nyt [%(link)s jaettu]."
+msgstr "Rosetter er nå [%(link)s sendt ut]."
 
 #: ukbot.py:1485 ukbot.py:1555
 msgid "UKBot encountered a problem"
-msgstr "UKBot havaitsi ongelman"
+msgstr "UKBot støtte på et problem"
 
 #: ukbot.py:1602
 msgid ""
 "This contest is closed – thanks to everyone who participated! Awards will be "
 "sent out as soon as the contest organizer has checked the results."
 msgstr ""
-"Tämä kilpailu on päättynyt – kiitos kaikille osallistuneille! Rusetit "
-"jaetaan heti kun kilpailun järjestäjä on tarkistanut tulokset."
+"Konkurransen er avsluttet – takk til alle som deltok! Rosetter vil sendes ut "
+"så snart konkurransearrangøren har sjekket resultatene."
 
 #: ukbot.py:1604
 msgid "This contest is closed – thanks to everyone who participated!"
-msgstr "Tämä kilpailu on päättynyt – kiitos kaikille osallistuneille!"
+msgstr "Denne konkurransen er avsluttet – takk til alle som deltok!"
 
 #: ukbot.py:1611
 #, python-format
@@ -247,40 +242,41 @@ msgid ""
 "Last updated %(lastupdate)s. The contest is open from %(startdate)s to "
 "%(enddate)s."
 msgstr ""
-"Päivitetty viimeksi %(lastupdate)s. Kilpailu on avoinna  %(startdate)s - "
+"Sist oppdatert %(lastupdate)s. Konkurransen er åpen fra %(startdate)s til "
 "%(enddate)s."
 
 #: ukbot.py:1635
 #, python-format
 msgid "UKBot encountered the following problems with the article [[:%s]]"
-msgstr "UKBot havaitsi seuraavat ongelmat artikkeliin [[:%s]] liittyen"
+msgstr "UKBot støtte på problemer med artikkelen [[:%s]]"
 
 #: ukbot.py:1674
 msgid "Updating with final results, the contest is now closed."
-msgstr "Lisätään lopulliset tulokset ja merkitään kilpailu päättyneeksi."
+msgstr ""
+"Oppdaterer med endelige resultater og merker konkurransen som avsluttet."
 
 #: ukbot.py:1676
 msgid "Checking results and handing out awards"
-msgstr "Tarkistetaan tulokset ja jaetaan rusetit"
+msgstr "Sjekker resultater og deler ut rosetter"
 
 #: ukbot.py:1678
 msgid "Updating"
-msgstr "Päivitetään"
+msgstr "Oppdaterer"
 
 #: ukbot.py:1734
 #, python-format
 msgid "#REDIRECT [[%s]]"
-msgstr "#OHJAUS [[%s]]"
+msgstr "#OMDIRIGERING [[%s]]"
 
 #: ukbot.py:1736
 #, python-format
 msgid "Redirecting to %s"
-msgstr "Ohjaus sivulle %s"
+msgstr "Omdirigerer til %s"
 
 #: ukbot.py:1766
 #, python-format
 msgid "The weekly contest is: %(link)s"
-msgstr "Viikon kilpailu on: %(link)s"
+msgstr "Ukens konkurranse er: %(link)s"
 
 #: ukfilters.py:122
 #, python-format
@@ -288,12 +284,12 @@ msgid ""
 "Could not analyze the article %(article)s because one of the revisions "
 "%(prevrev)d or %(rev)d could not be parsed: %(error)s"
 msgstr ""
-"Artikkelin %(article)s analysointi epäonnistui sillä versio %(prevrev)d tai "
-"%(rev)d ei tullut ymmärreyksi: %(error)s"
+"Kunne ikke analysere artikkelen %(article)s fordi en av revisjonene "
+"%(prevrev)d eller %(rev)d ikke kunne tolkes: %(error)s"
 
 #: ukfilters.py:316
 msgid "Encountered an infinite category loop: "
-msgstr "Jumiutunut loputtomaan luokkasilmukkaan: "
+msgstr "Havnet i en endeløs kategoriløkke: "
 
 #: ukrules.py:36
 msgid "max"
@@ -301,33 +297,32 @@ msgstr "maks"
 
 #: ukrules.py:53
 msgid "new page"
-msgstr "uusi sivu"
+msgstr "ny side"
 
 #: ukrules.py:63
 msgid "redirect"
-msgstr "uudelleenohjaus"
+msgstr "omdirigering"
 
 #: ukrules.py:125
 #, python-format
 msgid "removal of {{tl|%(template)s}}"
-msgstr "mallineen {{tl|%(template)s}} poisto"
+msgstr "fjerning av {{ml|%(template)s}}"
 
 #: ukrules.py:128
 #, python-format
 msgid ""
 "Encountered a problem while parsing [%(url)s rev. %(revid)d] : %(problem)s"
 msgstr ""
-"Ongelma havaittu kohteen [%(url)s rev. %(revid)d] ymmärtämisessä : "
-"%(problem)s"
+"Støtte på et problem med tolkningen av [%(url)s rev. %(revid)d] : %(problem)s"
 
 #: ukrules.py:138
 msgid "qualified"
-msgstr "hyväksytty"
+msgstr "kvalifisert"
 
 #: ukrules.py:152
 #, python-format
 msgid "%(bytes).f bytes"
-msgstr "%(bytes).f tavua"
+msgstr "%(bytes).f bytes"
 
 #: ukrules.py:168
 #, python-format
@@ -340,52 +335,47 @@ msgid ""
 "Word count failed for revision %(revid)d due to the following error: "
 "%(error)s"
 msgstr ""
-"Version %(revid)d pistelasku epäonnistui seuraavan ongelman vuoksi: %(error)s"
+"Ordtelling feilet for revisjon %(revid)d pga. følgende problem: %(error)s"
 
 #: ukrules.py:192
 msgid "images"
-msgstr "kuvaa"
+msgstr "bilder"
 
 #: ukrules.py:192
 msgid "image"
-msgstr "kuva"
+msgstr "bilde"
 
 #: ukrules.py:213
 msgid "links"
-msgstr "linkkiä"
+msgstr "lenker"
 
 #: ukrules.py:213
 msgid "link"
-msgstr "linkki"
+msgstr "lenke"
 
 #: ukrules.py:253
 #, python-format
 msgid "one reference"
 msgid_plural "%(num)d references"
-msgstr[0] "Yksi lähde on lisätty"
-msgstr[1] "%(num)d lähdettä on lisätty"
+msgstr[0] "én kilde"
+msgstr[1] "%(num)d kilder"
 
 #: ukrules.py:256
 #, python-format
 msgid "one reference pointer"
 msgid_plural "%(num)d reference pointers"
-msgstr[0] "Yksi viittaus jo olemassaolevaan lähteeseen"
-msgstr[1] "%(num)d viittausta jo olemassaoleviin lähteisiin"
+msgstr[0] "én henvisning til navngitt kilde"
+msgstr[1] "%(num)d henvisninger til navngitte kilder"
 
 #: ukrules.py:282
 #, python-format
 msgid "bonus %(bytes).f bytes"
-msgstr "bonus %(bytes).f tavua"
+msgstr "bonus %(bytes).f bytes"
 
 #: ukrules.py:310
 #, python-format
 msgid "bonus %(words)d words"
-msgstr "bonus %(words)d sanaa"
+msgstr "bonus %(words)d ord"
 
 #~ msgid "Unkown argument given to {{ml|%(template)s}}: %(argument)s"
-#~ msgstr ""
-#~ "Tuntematon argumentti on annettu kohteeseen {{ml|%(template)s}}: "
-#~ "%(argument)s"
-
-#~ msgid "Thanks, <nowiki>~~~~</nowiki>"
-#~ msgstr "Terveisin <nowiki>~~~~</nowiki>"
+#~ msgstr "Ukjent argument gitt til {{ml|%(template)s}}: %(argument)s"
