--- a/bot/fi_FI.po
+++ b/bot/fi_FI.po
@@ -171,7 +171,7 @@ msgstr "Käyttäjää %(user)s ri löytynyt {{tl|%(template)s}}-mallineesta."
 #, python-format
 msgid ""
 "Couldn't find the user %(user)s given to the {{tl|%(template)s}} template."
-msgstr "Fant ikke brukeren %(user)s gitt til {{tl|%(template)s}}-malen."
+msgstr "Ei löydetty käyttäjää %(user)s {{tl|%(template)s}}-mallineesta."
 
 #: ukbot.py:1214
 #, python-format
