--- a/bot/eu_ES.po
+++ b/bot/eu_ES.po
@@ -1,7 +1,7 @@
-# Finnish translation for UKBot
-# Copyright (C) 2013 Gálaniitoluodda
+# Basque translation for UKBot
+# Copyright (C) 2017
 # This file is distributed under the same license as the UKBot package.
-#
+# Galder Gonzalez Larrañaga <galder158@hotmail.com>, 2017
 #
 msgid ""
 msgstr ""
@@ -9,9 +9,9 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-30 20:14+0000\n"
 "PO-Revision-Date: 2014-08-31 15:05+0100\n"
-"Last-Translator: Dan Michael O. Heggø <danmichaelo@gmail.com>\n"
+"Last-Translator: Galder Gonzalez <galder158@hotmail.com>\n"
 "Language-Team: \n"
-"Language: Suomi\n"
+"Language: Basque\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -26,6 +26,10 @@ msgid ""
 "parent revision (%(parentid)s) of size %(size)d, possibly due to unclosed "
 "tags or templates in that revision."
 msgstr ""
+"[//%(host)s/w/index.php?diff=prev&oldid=%(revid)s %(revid)s] berrikusketa: "
+"Hitz zenbaketa ezberdina izan daiteke eta akatsak izan, ez direlako hitzak "
+"aurkitu aurreko berriskupenean (%(parentid)s) tamaina honekin %(size)d, "
+"ziurrenik itxi gabeko etiketa edo txantiloiak direla eta."
 
 #: bot/ukbot.py:354
 #, python-format
@@ -35,59 +39,60 @@ msgid ""
 "(%(words)d) is larger than the byte increase (%(bytes)d). Wrong word counts "
 "may occur for invalid wiki text."
 msgstr ""
+"[//%(host)s/w/index.php?diff=prev&oldid=%(revid)s %(revid)s] berrikuspena: "
+"hitz zenbaketa ezberdintasuna gaizki egon daiteke, hitz kontaketaren aldea "
+"(%(words)d) handiagoa delako byte kontaketaren aldea baino (%(bytes)d)."
+"Gaizki egindako hitz kontaketa wiki testu okerra dela eta gerta daiteke."
 
 #: bot/ukbot.py:959 bot/ukbot.py:1009
 msgid "%A, %H:%M"
-msgstr "%A kello %H.%M"
+msgstr "%A, %H.%M"
 
 #: bot/ukbot.py:970
 msgid "Category hit"
-msgstr "Luokkaosuma"
+msgstr "Kategoria"
 
 #: bot/ukbot.py:980
 #, python-format
 msgid "Total: {{formatnum:%(bytecount)d}} bytes, %(wordcount)d words"
-msgstr ""
-"Yhteensä: {{formatnum:%(bytecount)d}} {{subst:PLURAL:%(bytecount)d|tavu|"
-"tavua}}, %(wordcount)d {{subst:PLURAL:%(wordcount)d|sana|sanaa}}"
+msgstr "Guztira: {{formatnum:%(bytecount)d}} byte, %(wordcount)d hitzetan"
 
 #: bot/ukbot.py:991
 msgid ""
 "<strong>Note:</strong> The contributions to this article are currently "
 "disqualified."
 msgstr ""
-"<strong>Huomio:</strong> Muokkaukset tähän artikkeliin on toistaiseksi "
-"hylätty."
+"<strong>Oharra:</strong> Artikulu honi egindako ekarpenak oraintxe "
+"deskalifikaturik daude."
 
 #: bot/ukbot.py:996
 msgid "<abbr class=\"newpage\" title=\"New page\">N</abbr>"
-msgstr "<abbr class=\"newpage\" title=\"Uusi sivu\">U</abbr>"
+msgstr "<abbr class=\"newpage\" title=\"Orrialde beria\">B</abbr>"
 
 #: bot/ukbot.py:1009
 msgid "suspended since"
-msgstr "suspendert siden"
+msgstr "noiztik suspenditua"
 
 #: bot/ukbot.py:1013
 msgid "No qualifying contributions registered yet"
-msgstr "Hyväksyttyjä muokkauksia ei ole vielä rekisteröity"
+msgstr "Ez da izena eman dezakeen wikilaririk erregistratu oraindik"
 
 #: bot/ukbot.py:1015
 msgid "articles"
-msgstr ""
-"%(articlecount)d {{subst:PLURAL:%(articlecount)d|artikkeli|artikkelia}}"
+msgstr "artikulu"
 
 #: bot/ukbot.py:1017
 msgid "{{Kolonner}}\n"
-msgstr "{{Sarakkeet}}\n"
+msgstr "{{Multicol}}\n"
 
 #: bot/ukbot.py:1041
 #, python-format
 msgid "Found no \"%(section)s\" sections in the page \"%(page)s\""
-msgstr "Ei löydettyjä \"%(section)s\"-osioita sivulla \"%(page)s\""
+msgstr "Ez da \"%(section)s\" sekziorik aurkitu \"%(page)s\" orrialdean"
 
 #: bot/ukbot.py:1070
 msgid "Couldn't find the list of participants!"
-msgstr "Osallistujaluettelon löytäminen epäonnistui!"
+msgstr "Ezin izan da parte-hartzaileen zerrendarik aurkitu!"
 
 #: bot/ukbot.py:1103
 #, python-format
@@ -95,24 +100,24 @@ msgid ""
 "There are no point rules defined for this contest. Point rules are defined "
 "by {{tl|%(template)s}}."
 msgstr ""
-"Tähän kilpailuun ei ole asetettu pistelaskusääntöjä. Säännöt merkitään näin: "
-"{{tl|%(template)s}}."
+"Ez dago puntuazio araurik lehiaketa honetan. Puntuak {{tx|%(template)s}}."
+"txantiloiak definitzen ditu."
 
 #: bot/ukbot.py:1110
 #, python-format
 msgid "This contest is missing a {{tl|%(template)s}} template."
-msgstr "Tästä kilpailusta puuttuu {{tl|%(template)s}}-malline."
+msgstr "Lehiaketa honek ez du {{tx|%(template)s}} txantiloia."
 
 #: bot/ukbot.py:1116
 msgid "Could not parse the catignore page"
-msgstr "Catignore-sivun sisältöä ei ymmärretty"
+msgstr "Ezin izan da catignore orrialdea kargatu"
 
 #: bot/ukbot.py:1148
 #, python-format
 msgid ""
 "No template (second argument) given to {{tlx|%(template)s|%(firstarg)s}}"
 msgstr ""
-"Mallineita (toinen argumentti) ei ole annettu kohteeseen {{tlx|%(template)s|"
+"Ez zaio bigarren argumentudun txantiloirik eman {{tx|%(template)s|"
 "%(firstarg)s}}"
 
 #: bot/ukbot.py:1161
@@ -120,84 +125,83 @@ msgstr ""
 msgid ""
 "No byte limit (second argument) given to {{tlx|%(template)s|%(firstarg)s}}"
 msgstr ""
-"Tavurajaa (toinen argumentti) ei ole annettu kohteeseen {{tlx|%(template)s|"
-"%(firstarg)s}}"
+"Ez zaio byte mugarik eman (bigarren argumentua) {tx|%(template)s|"
+"%(firstarg)s}} txantiloiari"
 
 #: bot/ukbot.py:1167
 #, python-format
 msgid "No categories given to {{tlx|%(template)s|%(firstarg)s}}"
-msgstr "Kohteeseen {{tlx|%(template)s|%(firstarg)s}} ei ole annettu luokkia"
+msgstr "Ez zaio kategoriarik eman {{tx|%(template)s|%(firstarg)s}}"
 
 #: bot/ukbot.py:1218
 #, python-format
 msgid "Unknown argument given to {{tl|%(template)s}}: %(argument)s"
-msgstr ""
-"Tuntematon argumentti on annettu kohteeseen {{tl|%(template)s}}: %(argument)s"
+msgstr "Parametro ezezaguna eman da {{tx|%(template)s}}: %(argument)s"
 
 #: bot/ukbot.py:1309
 #, python-format
 msgid "Unkown argument given to {{tl|%(template)s}}: %(argument)s"
-msgstr ""
-"Tuntematon argumentti on annettu kohteeseen {{tl|%(template)s}}: %(argument)s"
+msgstr "Parametro ezezaguna eman da {{tx|%(template)s}}: %(argument)s"
 
 #: bot/ukbot.py:1319
 #, python-format
 msgid "Could not parse the {{tl|%(template)s}} template."
-msgstr "{{tl|%(template)s}}-mallineen ymmärtäminen epäonnistui."
+msgstr "Ezin izan da {{tx|%(template)s}} txantiloia irakurri."
 
 #: bot/ukbot.py:1345
 #, python-format
 msgid ""
 "Did not find %(week)s+%(year)s or %(start)s+%(end)s in {{tl|%(templates)s}}."
 msgstr ""
-"Kohteesta {{tl|%(templates)s}} ei ole löydetty %(week)s+%(year)s eikä "
-"%(start)s+%(end)s."
+"Ez da aurkitu %(week)s+%(year)s edo %(start)s+%(end)s hemen: {{tx|"
+"%(templates)s}}."
 
 #: bot/ukbot.py:1401
 #, python-format
 msgid "Couldn't parse the date given to the {{tl|%(template)s}} template."
-msgstr ""
-"{{tl|%(template)s}}-mallineeseen annettu päivämäärä ei tullut ymmärretyksi."
+msgstr "Ezin izan da emandako data kalkulatu {{tx|%(template)s}} txantiloian."
 
 #: bot/ukbot.py:1431
 #, python-format
 msgid ""
 "Could not find the user %(user)s given to the {{tl|%(template)s}} template."
-msgstr "Käyttäjää %(user)s ri löytynyt {{tl|%(template)s}}-mallineesta."
+msgstr ""
+"Ezin izan da %(user)s wikilaria aurkitu {{tx|%(template)s}} txantiloian."
 
 #: bot/ukbot.py:1459 bot/ukbot.py:1487
 #, python-format
 msgid ""
 "Couldn't find the user %(user)s given to the {{tl|%(template)s}} template."
-msgstr "Ei löydetty käyttäjää %(user)s {{tl|%(template)s}}-mallineesta."
+msgstr ""
+"Ezin izan da %(user)s wikilaria aurkitu {{tx|%(template)s}} txantiloian."
 
 #: bot/ukbot.py:1586
 msgid "Day"
-msgstr "Päivä"
+msgstr "Eguna"
 
 #: bot/ukbot.py:1587
 msgid "Points"
-msgstr "Pisteet"
+msgstr "Puntuak"
 
 #: bot/ukbot.py:1590 bot/ukbot.py:1834 bot/ukbot.py:2025 bot/ukbot.py:2026
 #: bot/ukbot.py:2027
 msgid "%e. %B %Y, %H:%M"
-msgstr "%e. %Bta %Y kello %H.%M"
+msgstr "%Y %B %e, %H:%M"
 
 #: bot/ukbot.py:1591
 #, python-format
 msgid "Updated %(date)s"
-msgstr "Päivitetty %(date)s"
+msgstr "Azken gaurkotzea: %(date)s"
 
 #: bot/ukbot.py:1629
 #, python-format
 msgid "Weekly contest for week %(week)d"
-msgstr "Viikon %(week)d kilpailu"
+msgstr "Asteroko lehiaketa aste honetan: %(week)d"
 
 #: bot/ukbot.py:1631
-#, python-format
+#, fuzzy, python-format
 msgid "Weekly contest for week %(startweek)d–%(endweek)d"
-msgstr "Viikkojen %(startweek)d–%(endweek)d kilpailu"
+msgstr "Asteroko lehiaketa aste honetan: %(startweek)d-%(endweek)d"
 
 #: bot/ukbot.py:1704
 #, python-format
@@ -205,16 +209,16 @@ msgid ""
 "Note that the contest this week is [[%(url)s|{{%(template)s|%(weekarg)s="
 "%(week)s}}]]. Join in!"
 msgstr ""
-"Muista, että tämän viikon kilpailu on [[%(url)s|{{%(template)s|%(weekarg)s="
-"%(week)s}}]]. Onnea matkaan!"
+"Aste honetako lehiaketa honakoa da: [[%(url)s|{{%(template)s|%(weekarg)s="
+"%(week)s}}]]. Batu!"
 
 #: bot/ukbot.py:1710
 msgid "Regards"
-msgstr "Terveisin"
+msgstr "Ondo segi"
 
 #: bot/ukbot.py:1710
 msgid "and"
-msgstr "ja"
+msgstr "eta"
 
 #: bot/ukbot.py:1764
 #, python-format
@@ -226,36 +230,38 @@ msgid ""
 "everything looks fine, [%(link)s click here] (and save) to indicate that I "
 "can send out the awards at first occasion."
 msgstr ""
-"Nyt sinun on tarkistettava tulokset. Mikäli [[%(page)s|kilpailusivun]] "
-"lopussa on virheilmoituksia, on sinun tarkistettava, että muokkauksista on "
-"saatu oikea määrä pisteitä. Katso myös onko keskustelusivulla kommentteja "
-"tai valituksia. Jos kaikki näyttää olevan kunnossa, paina [%(link)s tästä] "
-"(ja tallenna), niin rusetit lähetetään melko nopeasti."
+"Orain ikusi behar duzu ea emaitzek itxura ona duten. Akatsik badago mezuetan "
+"[[%(page)s|lehiaketaren orrialdearen]] amaieran, begiratu beharko zenuke ea "
+"ekarpen guztiek puntu kopuru zuzena jaso ote duten. Gainera konproba ezazu "
+"denak itxura ona duela, [%(link)s egin klik hemen] (eta gorde) esateko bidal "
+"ditzakedala jada sariak."
 
 #: bot/ukbot.py:1765
 msgid "Thanks, ~~~~"
-msgstr "Terveisin, ~~~~"
+msgstr "Eskerrik asko, ~~~~"
 
 #: bot/ukbot.py:1777
 #, python-format
 msgid "Awards have been [%(link)s sent out]."
-msgstr "Rusetit on nyt [%(link)s jaettu]."
+msgstr "Sariak [%(link)s bidali dira]."
 
 #: bot/ukbot.py:1965 bot/ukbot.py:2432
 msgid "UKBot encountered a problem"
-msgstr "UKBot havaitsi ongelman"
+msgstr "UKBotek arazo bat aurkitu du"
 
 #: bot/ukbot.py:2020
+#, fuzzy
 msgid ""
 "This contest is closed – thanks to everyone who participated! Awards will be "
 "sent out as soon as the contest organizer has checked the results."
 msgstr ""
-"Tämä kilpailu on päättynyt – kiitos kaikille osallistuneille! Rusetit "
-"jaetaan heti kun kilpailun järjestäjä on tarkistanut tulokset."
+"Lehiaketa hau itxita dago - eskerrik asko parte-hartzaile guztiei! Sariak "
+"emango dira lehiaketaren antolatzaileak emaitzak berrikusten dituenean."
 
 #: bot/ukbot.py:2022
+#, fuzzy
 msgid "This contest is closed – thanks to everyone who participated!"
-msgstr "Tämä kilpailu on päättynyt – kiitos kaikille osallistuneille!"
+msgstr "Lehiaketa hau itxita dag - eskerrik asko parte-hartzailee guztiei!"
 
 #: bot/ukbot.py:2029
 #, python-format
@@ -263,40 +269,40 @@ msgid ""
 "Last updated %(lastupdate)s. The contest is open from %(startdate)s to "
 "%(enddate)s."
 msgstr ""
-"Päivitetty viimeksi %(lastupdate)s. Kilpailu on avoinna  %(startdate)s – "
-"%(enddate)s."
+"Azken gaurkotzea: %(lastupdate)s. Lehiaketa hau %(startdate)s eta "
+"%(enddate)s bitarte irekita dago."
 
 #: bot/ukbot.py:2050
 #, python-format
 msgid "UKBot encountered the following problems with the article [[:%s]]"
-msgstr "UKBot havaitsi seuraavat ongelmat artikkeliin [[:%s]] liittyen"
+msgstr "UKBotek honako akatsa aurkitu du artikuluan: [[:%s]]"
 
 #: bot/ukbot.py:2101
 msgid "Updating with final results, the contest is now closed."
-msgstr "Lisätään lopulliset tulokset ja merkitään kilpailu päättyneeksi."
+msgstr "Azken emaitzekin gaurkotzen, lehiaketa itxiko da."
 
 #: bot/ukbot.py:2103
 msgid "Checking results and handing out awards"
-msgstr "Tarkistetaan tulokset ja jaetaan rusetit"
+msgstr "Emaitzak konprobatzen eta sariak ematen"
 
 #: bot/ukbot.py:2105
 msgid "Updating"
-msgstr "Päivitetään"
+msgstr "Gaurkotzen"
 
 #: bot/ukbot.py:2170
 #, python-format
 msgid "#REDIRECT [[%s]]"
-msgstr "#OHJAUS [[%s]]"
+msgstr "#BIRZUZENDU [[%s]]"
 
 #: bot/ukbot.py:2173
 #, python-format
 msgid "Redirecting to %s"
-msgstr "Ohjaus sivulle %s"
+msgstr "%s orrialdera birzuzentzen"
 
 #: bot/ukbot.py:2204
 #, python-format
 msgid "The weekly contest is: %(link)s"
-msgstr "Viikon kilpailu on: %(link)s"
+msgstr "Aste honetako lehiaketa: %(link)s"
 
 #: bot/ukfilters.py:131
 #, python-format
@@ -304,78 +310,74 @@ msgid ""
 "Could not analyze the article %(article)s because one of the revisions "
 "%(prevrev)d or %(rev)d could not be parsed: %(error)s"
 msgstr ""
-"Artikkelin %(article)s analysointi epäonnistui sillä versio %(prevrev)d tai "
-"%(rev)d ei tullut ymmärreyksi: %(error)s"
+"Ezin izan da %(article)s artikulua aztertu berrikuspenetako bat %(prevrev)d "
+"edo %(rev)d ezin izan delako ikusi: %(error)s"
 
 #: bot/ukfilters.py:327
 msgid "Encountered an infinite category loop: "
-msgstr "Jumiutunut loputtomaan luokkasilmukkaan: "
+msgstr "Kategoria infinitu lotuar bat aurkitu da: "
 
 #: bot/ukrules.py:40
 msgid "max"
-msgstr "maks"
+msgstr "gehienez"
 
 #: bot/ukrules.py:60 bot/ukrules.py:63
 msgid "new page"
-msgstr "uusi sivu"
+msgstr "orrialde berria"
 
 #: bot/ukrules.py:74
 msgid "redirect"
-msgstr "uudelleenohjaus"
+msgstr "birzuzeneketa"
 
 #: bot/ukrules.py:149
 #, python-format
 msgid "removal of {{tl|%(template)s}}"
-msgstr "mallineen {{tl|%(template)s}} poisto"
+msgstr "{{tx|%(template)s}} txantiloia kentzea"
 
 #: bot/ukrules.py:161
 msgid "qualified"
-msgstr "hyväksytty"
+msgstr "kalifikatua"
 
 #: bot/ukrules.py:171
 msgid "contribution"
-msgstr ""
+msgstr "ekarpena"
 
 #: bot/ukrules.py:185
 #, python-format
 msgid "%(bytes).f bytes"
-msgstr "%(bytes).f {{subst:PLURAL:%(bytes).f|tavu|tavua}}"
+msgstr "%(bytes).f byte"
 
 #: bot/ukrules.py:202
 #, python-format
 msgid "%(words).f words"
-msgstr "%(words).f {{subst:PLURAL:%(words).f|sana|sanaa}}"
+msgstr "%(words).f hitz"
 
 #: bot/ukrules.py:305
 msgid "images"
-msgstr "%(images).f {{subst:PLURAL:%(images).f|kuva|kuvaa}}"
+msgstr "%(images).f irudi"
 
 #: bot/ukrules.py:327
 msgid "links"
-msgstr "%(links).f {{subst:PLURAL:%(links).f|linkkit|linkkiä}}"
+msgstr "%(links).f lotura"
 
 #: bot/ukrules.py:392
 msgid "references"
-msgstr ""
-"{{subst:PLURAL:%(num)d|Yksi lähde on lisätty|%(num)d lähdettä on lisätty}}"
+msgstr "erreferentziak"
 
 #: bot/ukrules.py:395
 msgid "reference pointers"
-msgstr ""
-"{{subst:PLURAL:%(num)d|Yksi viittaus jo olemassa olevaan lähteeseen|%(num)d "
-"viittausta jo olemassa oleviin lähteisiin}}"
+msgstr "erreferentzia puntu"
 
 #: bot/ukrules.py:428
-#, fuzzy
 msgid "added reference section"
-msgstr "Yksi viittaus jo olemassaolevaan lähteeseen"
+msgstr "erreferentzia atala gehitu du"
 
 #: bot/ukrules.py:453
 #, python-format
 msgid "bonus %(bytes).f bytes"
-msgstr "bonus %(bytes).f {{subst:PLURAL:%(bytes).f|tavu|tavua}}"
+msgstr "bonus %(bytes).f byte"
 
 #: bot/ukrules.py:480
 #, python-format
 msgid "bonus %(words)d words"
-msgstr "bonus %(words)d {{subst:PLURAL:%(words)d|sana|sanaa}}"
+msgstr "bonus %(words)d hitz"
